--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-pydantic
-pytest
-FastAPI
-uvicorn
-langcodes
-pytz
-black
+pydantic==1.8.2
+pytest==6.2.5
+fastapi==0.70.0
+uvicorn==0.15.0
+langcodes==3.3.0
+click==8.0.3
+pytz==2021.3
+black==21.11b1
+loguru==0.5.3
+loguru-caplog==0.2.0
+requests==2.26.0
